Used keras to implement a 5 layer NN that actually runs

--- a/code/basic_neural_network.ipynb
+++ b/code/basic_neural_network.ipynb
@@ -75,24 +75,47 @@
     "        aligned_seq = sequence[:length]\n",
     "    else:\n",
     "        aligned_seq = sequence + [0]*(length-len(sequence))\n",
-    "    return aligned_seq\n",
-    "    \n",
+    "    return aligned_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOT used\n",
     "def to_positive_strand(strand, sequence):\n",
     "    if strand == '-':\n",
     "        unflattened_seq = [base_pairs[n] for n in sequence.complement()]\n",
     "    else:\n",
-    "        unflattened_seq = [base_pairs[n] for n in sequence]\n",
-    "    return unflattened_seq\n",
-    "\n",
+    "        unflattened_seq = [base_pairs[n] for n in sequence]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_seq_record(seq_record, X, y):\n",
     "    header = seq_record.description.split('|')\n",
     "    expressed = int(header[1])\n",
     "    y.append(expressed)\n",
-    "    unflattened_seq = to_positive_strand(header[3], seq_record.seq)\n",
+    "    # unflattened_seq = to_positive_strand(header[3], seq_record.seq)\n",
+    "    # NO NEED to reverse complement\n",
+    "    unflattened_seq = [base_pairs[n] for n in seq_record.seq]\n",
     "    flattened_seq = [i for x in unflattened_seq for i in x]\n",
     "    aligned_seq = align_sequence(4000, flattened_seq)\n",
-    "    X.append(np.array(aligned_seq))\n",
-    "    \n",
+    "    X.append(np.array(aligned_seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def read_file(file, X, y):\n",
     "    seq_record_list = list(SeqIO.parse(\"data/input/3.24_species_only/\" + file,\"fasta\"))\n",
     "    for i in range(len(seq_record_list)):\n",
@@ -108,12 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_size = 500\n",
-    "test_size = 20\n",
+    "test_size = 50\n",
     "file_count = 0\n",
     "\n",
     "X_train = []\n",
@@ -138,25 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12000, 4000), (12000, 1), (480, 4000), (480, 1)]"
+       "[(12000, 4000), (12000, 1), (1200, 4000), (1200, 1)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train = np.array(X_train).astype(int)\n",
-    "y_train = np.transpose(np.array([y_train]).astype(int))\n",
-    "X_test = np.array(X_test).astype(int)\n",
-    "y_test = np.transpose(np.array([y_test]).astype(int))\n",
+    "X_train = np.array(X_train)\n",
+    "y_train = np.array(y_train)\n",
+    "if len(y_train.shape) == 1:\n",
+    "    y_train = np.transpose(np.array([y_train]))\n",
+    "X_test = np.array(X_test)\n",
+    "y_test = np.transpose(np.array(y_test))\n",
+    "if len(y_test.shape) == 1:\n",
+    "    y_test = np.transpose(np.array([y_test]))\n",
     "[X_train.shape, y_train.shape, X_test.shape, y_test.shape]"
    ]
   },
@@ -170,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +218,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,121 +230,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.55"
+       "0.593"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_predicted = np.array(model.predict(X_test))\n",
-    "round(sum(y_test.ravel() == y_predicted)/y_test.shape[0], 2)"
+    "round(sum(y_test.ravel() == y_predicted)/y_test.shape[0], 3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This result of a 55% correct prediction is slightly better, if any, than random guessing. This suggests that a lot of work needs to be done before we get a satisfying neural network."
+    "This result of the rate of  correct prediction is slightly better, if any, than random guessing. This suggests that a lot of work needs to be done before we get a satisfying neural network."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Neural Network\n",
-    "Now that we have the data ready in the desired numpy array format with correct shapes, we can proceed to train the neural network with our training data in tensorflow and use our test data to see how accurate it performs.\n",
-    "\n",
-    "**TODO**: Fix the problem and somehow make the neural network actually **RUN**!!"
+    "### Neural Network with Keras\n",
+    "Now that we have the data ready in the desired numpy array format with correct shapes, we can proceed to train the neural network with our training data in keras and use our test data to see how accurate it performs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cell implements a sequential neural network with 1 input layer (4000 neurons), 4 hidden layers (1000, 400, 40, 10 neurons repectively) and 1 output layer with keras. <br/>\n",
+    "All layers except the final use **relu** as activation functions while the final layer uses **sigmoid** as activation function. The cost fucntion is just defined as the binary crossentrophy. <br/> We train our neural network with 12000 DNA sequences in our training data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /anaconda3/lib/python3.6/site-packages/tensorflow/python/util/tf_should_use.py:118: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
-      "Instructions for updating:\n",
-      "Use `tf.global_variables_initializer` instead.\n"
+      "Epoch 1/10\n",
+      "12000/12000 [==============================] - 8s 644us/step - loss: 0.6742 - acc: 0.5971\n",
+      "Epoch 2/10\n",
+      "12000/12000 [==============================] - 8s 683us/step - loss: 0.6556 - acc: 0.6106\n",
+      "Epoch 3/10\n",
+      "12000/12000 [==============================] - 8s 650us/step - loss: 0.6359 - acc: 0.6281\n",
+      "Epoch 4/10\n",
+      "12000/12000 [==============================] - 9s 723us/step - loss: 0.6100 - acc: 0.6623\n",
+      "Epoch 5/10\n",
+      "12000/12000 [==============================] - 8s 706us/step - loss: 0.5754 - acc: 0.7017\n",
+      "Epoch 6/10\n",
+      "12000/12000 [==============================] - 8s 678us/step - loss: 0.5328 - acc: 0.7380\n",
+      "Epoch 7/10\n",
+      "12000/12000 [==============================] - 7s 611us/step - loss: 0.4815 - acc: 0.7786\n",
+      "Epoch 8/10\n",
+      "12000/12000 [==============================] - 7s 609us/step - loss: 0.4365 - acc: 0.8052\n",
+      "Epoch 9/10\n",
+      "12000/12000 [==============================] - 7s 619us/step - loss: 0.4067 - acc: 0.8159\n",
+      "Epoch 10/10\n",
+      "12000/12000 [==============================] - 7s 623us/step - loss: 0.3816 - acc: 0.8276\n"
      ]
-    }
-   ],
-   "source": [
-    "X = tf.placeholder(tf.float32, [None, 4000])\n",
-    "W = tf.Variable(tf.truncated_normal([4000, 1] ,stddev=0.1))\n",
-    "B = tf.Variable(tf.zeros([1]))\n",
-    "\n",
-    "# model\n",
-    "Y = tf.nn.softmax(tf.matmul(X, W) + B)\n",
-    "# placeholder for correct labels\n",
-    "Y_ = tf.placeholder(tf.float32, [None, 1])\n",
-    "init = tf.initialize_all_variables()\n",
-    "\n",
-    "cross_entropy = -tf.reduce_sum(Y_ * tf.log(Y))\n",
-    "\n",
-    "# % of correct answers found in batch\n",
-    "is_correct = tf.equal(tf.argmax(Y,1), tf.argmax(Y_,1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))\n",
-    "\n",
-    "optimizer = tf.train.GradientDescentOptimizer(0.003)\n",
-    "train_step = optimizer.minimize(cross_entropy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "[1.0, -0.0]"
+       "<keras.callbacks.History at 0x181ad098d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
+    "from keras.layers import Input, Dense\n",
+    "from keras.models import Model, Sequential\n",
     "\n",
-    "train_data={X: X_train, Y_: y_train}\n",
-    "sess.run([accuracy, cross_entropy], feed_dict=train_data)"
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Dense(units=1000, activation='relu', input_dim=4000))\n",
+    "model.add(Dense(units=400, activation='relu'))\n",
+    "model.add(Dense(units=40, activation='relu'))\n",
+    "model.add(Dense(units=10, activation='relu'))\n",
+    "model.add(Dense(units=1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(optimizer='SGD',\n",
+    "              loss='binary_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model.fit(X_train, y_train, batch_size=100, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the accuracy on the training set reaches 83% after 10 epoches. <br/>\n",
+    "Now we test the performance of this model with our test data. <br/> The test data contains 1200 DNA sequences. This size, I think, is already big enough for us to believe that the performance on this test data is quite representative of how the model would perform on new data in general (in other words, with little bias). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correct = list(np.apply_along_axis(lambda x: 0 if x<0.5 else 1, 1, result))==y_test.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.0, -0.0]"
+       "0.618"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_data={X: X_test, Y_: y_test}\n",
-    "sess.run([accuracy, cross_entropy], feed_dict=test_data)"
+    "round(sum(correct)/y_test.shape[0], 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result is roughly 62%, clearly better than random guessing, which at least suggests that the neural network is actually running. <br/>\n",
+    "However, it is still far from what would be considered a satisfying prediction algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some major points to consider that may be helpful to improving the performance of the neural network:\n",
+    "1. Use more complex neural network structure rather than the simple sequential model used above.\n",
+    "2. Incorporate other information like what region of genome is the sequence located, the mapping of transcription factors, etc.\n",
+    "3. Improve the way sequences of different lengths are aligned (Our current approach is truncating the long, filling zero with the short, which probably is too naive and causes significant loss of information)"
    ]
   }
  ],
