changed one more path name to reflect data dir. move

--- a/code/basic_neural_network.ipynb
+++ b/code/basic_neural_network.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "//anaconda/envs/ipykernel_py3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
     }
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def read_file(file, X, y):\n",
-    "    seq_record_list = list(SeqIO.parse(\"data/input/3.24_species_only/\" + file,\"fasta\"))\n",
+    "    seq_record_list = list(SeqIO.parse(\"../data/input/3.24_species_only/\" + file,\"fasta\"))\n",
     "    for i in range(len(seq_record_list)):\n",
     "        process_seq_record(seq_record_list[i], X, y)"
    ]
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
        "[(12000, 4000), (12000, 1), (1200, 4000), (1200, 1)]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
