minor changes to basic notebook and started TF new notebook

--- a/code/basic_neural_network.ipynb
+++ b/code/basic_neural_network.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "source": [
     "The following cell implements a sequential neural network with 1 input layer (4000 neurons), 4 hidden layers (1000, 400, 40, 10 neurons repectively) and 1 output layer with keras. <br/>\n",
-    "All layers except the final use **relu** as activation functions while the final layer uses **sigmoid** as activation function. The cost fucntion is just defined as the binary crossentrophy. <br/> We train our neural network with 12000 DNA sequences in our training data set."
+    "All layers except the final use **relu** or **elu** as activation functions while the final layer uses **sigmoid** as activation function. The cost fucntion is just defined as the binary crossentrophy. <br/> We train our neural network with 12000 DNA sequences in our training data set."
    ]
   },
   {
@@ -316,7 +316,7 @@
     "    model.add(Dense(units=1000, activation='relu', input_dim=4000))\n",
     "    model.add(Dense(units=400, activation='relu'))\n",
     "    model.add(Dense(units=40, activation='relu'))\n",
-    "    model.add(Dense(units=10, activation='relu'))\n",
+    "    model.add(Dense(units=10, activation='elu'))\n",
     "    model.add(Dense(units=1, activation='sigmoid'))\n",
     "    model.compile(optimizer = 'SGD',\n",
     "                  loss = 'binary_crossentropy',\n",
