--- a/code/TF_binding_test.ipynb
+++ b/code/TF_binding_test.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the output we get from the \"badic_neural_network\" notebook, the accuracy we get when testing our neural network on new data is poor even when we train it with large data size. <br/>\n",
+    "Given the output we get from the \"basic_neural_network\" notebook, the accuracy we get when testing our neural network on new data is poor even when we train it with large data set (24000 sequences). <br/>\n",
     "This is of course related to the fact that we only make use of (part of) the DNA sequence itself and no extra information is incorporated in the input. <br/>\n",
-    "This notebook trys to incorporate the Transcription Factor Binding Site information into the current data set and  explores different to accomplish this."
+    "This notebook trys to incorporate the Transcription Factor Binding Site information into the current data set and  explores different ways to accomplish this."
    ]
   },
   {
@@ -14,10 +14,16 @@
    "metadata": {},
    "source": [
     "### To Do\n",
-    "1. Merge the information of TF binding sites and prepare it properly into the desired format.\n",
+    "1. Merge the information of TF binding sites in various ways and prepare it properly into the desired format.\n",
     "2. Design the Neural Network architecture (without implementation)\n",
-    "3. Hopefully, test some architecture designs and see how it improves(?) the result accuracy\n",
-    "4. "
+    "3. Hopefully, test some architecture designs and see how it improves(?) the result accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incorporate the TF Information and Prepare the Data"
    ]
   },
   {
