--- a/code/TF_binding_test.ipynb
+++ b/code/TF_binding_test.ipynb
@@ -31,7 +31,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "base_pairs = {'A': [1, 0, 0, 0], \n",
+    "'C': [0, 1, 0, 0],\n",
+    "'G': [0, 0, 1, 0],\n",
+    "'T': [0, 0, 0, 1],\n",
+    "'a': [1, 0, 0, 0],\n",
+    "'c': [0, 1, 0, 0],\n",
+    "'g': [0, 0, 1, 0],\n",
+    "'t': [0, 0, 0, 1],\n",
+    "'n': [0, 0, 0, 0],\n",
+    "'N': [0, 0, 0, 0]}"
+   ]
   }
  ],
  "metadata": {
@@ -50,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
