added data structure

--- a/code/TF_binding_test.ipynb
+++ b/code/TF_binding_test.ipynb
@@ -100,7 +100,27 @@
     "'g': [0, 0, 1, 0],\n",
     "'t': [0, 0, 0, 1],\n",
     "'n': [0, 0, 0, 0],\n",
-    "'N': [0, 0, 0, 0]}"
+    "'N': [0, 0, 0, 0]}\n",
+    "tfbs  = {[1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],\n",
+    "        [0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1]}"
    ]
   }
  ],
@@ -120,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
