--- a/code/2018-8-17-trained-by-cnn.ipynb
+++ b/code/2018-8-17-trained-by-cnn.ipynb
@@ -13,7 +13,7 @@
     "- Add bias in layers. \n",
     "- Use Relu for learning session, and softmax for final classification.\n",
     "\n",
-    "**Background**: Current model trained by recurent neural network (RNN) gives low accuracy. The reason why we switch from CNN to RNN was that this somehow improved the accuracy by 10%. However, given math behind these two neural network, CNN should be better in handling spacial data, which is in our case, since the order of a nucleotide sequence does matter. \n",
+    "**Background**: Current model trained by recurent neural network (RNN) gives low accuracy. The reason why we switch from CNN to RNN was that this somehow improved the accuracy by 10%. However, given the math behind these two neural networks, CNN should be better in handling spacial data, which is in our case, since the order in a nucleotide sequence does matter. \n",
     "\n",
     "**Experiment**:"
    ]
