--- a/code/2018-07-11_lstm_naive_trimming_size_1000.ipynb
+++ b/code/2018-07-11_lstm_naive_trimming_size_1000.ipynb
@@ -26,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
+      "  (fname, cnt))\n",
+      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
+      "  (fname, cnt))\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +139,7 @@
        "[(9600, 7000), (9600, 1), (1152, 7000), (1152, 1)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,9 +159,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-dd1a0f481b45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDense\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCuDNNLSTM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model, Sequential\n",
     "from keras.layers import Dense, CuDNNLSTM"
@@ -167,56 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 8640 samples, validate on 960 samples\n",
-      "Epoch 1/20\n",
-      "8640/8640 [==============================] - 21s 2ms/step - loss: 0.6740 - acc: 0.5778 - val_loss: 0.6596 - val_acc: 0.5677\n",
-      "Epoch 2/20\n",
-      "8640/8640 [==============================] - 18s 2ms/step - loss: 0.6594 - acc: 0.5822 - val_loss: 0.6476 - val_acc: 0.5792\n",
-      "Epoch 3/20\n",
-      "8640/8640 [==============================] - 18s 2ms/step - loss: 0.6527 - acc: 0.5905 - val_loss: 0.6438 - val_acc: 0.5677\n",
-      "Epoch 4/20\n",
-      "8640/8640 [==============================] - 18s 2ms/step - loss: 0.6476 - acc: 0.6052 - val_loss: 0.6469 - val_acc: 0.5542\n",
-      "Epoch 5/20\n",
-      "8640/8640 [==============================] - 18s 2ms/step - loss: 0.6429 - acc: 0.6093 - val_loss: 0.6691 - val_acc: 0.6115\n",
-      "Epoch 6/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6378 - acc: 0.6250 - val_loss: 0.6794 - val_acc: 0.5615\n",
-      "Epoch 7/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6299 - acc: 0.6382 - val_loss: 0.6783 - val_acc: 0.5448\n",
-      "Epoch 8/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6255 - acc: 0.6397 - val_loss: 0.6942 - val_acc: 0.4708\n",
-      "Epoch 9/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6183 - acc: 0.6501 - val_loss: 0.7300 - val_acc: 0.5437\n",
-      "Epoch 10/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6108 - acc: 0.6568 - val_loss: 0.7019 - val_acc: 0.5115\n",
-      "Epoch 11/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.6038 - acc: 0.6678 - val_loss: 0.7077 - val_acc: 0.5240\n",
-      "Epoch 12/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5972 - acc: 0.6862 - val_loss: 0.7200 - val_acc: 0.4823\n",
-      "Epoch 13/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5899 - acc: 0.6884 - val_loss: 0.7162 - val_acc: 0.4875\n",
-      "Epoch 14/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5849 - acc: 0.6975 - val_loss: 0.7122 - val_acc: 0.5281\n",
-      "Epoch 15/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5746 - acc: 0.7075 - val_loss: 0.7448 - val_acc: 0.5469\n",
-      "Epoch 16/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5702 - acc: 0.7157 - val_loss: 0.8116 - val_acc: 0.5385\n",
-      "Epoch 17/20\n",
-      "8640/8640 [==============================] - 17s 2ms/step - loss: 0.5601 - acc: 0.7201 - val_loss: 0.7929 - val_acc: 0.5427\n",
-      "Epoch 18/20\n",
-      "8640/8640 [==============================] - 44s 5ms/step - loss: 0.5509 - acc: 0.7318 - val_loss: 0.7587 - val_acc: 0.5062\n",
-      "Epoch 19/20\n",
-      "8640/8640 [==============================] - 22s 3ms/step - loss: 0.5458 - acc: 0.7295 - val_loss: 0.7893 - val_acc: 0.5000\n",
-      "Epoch 20/20\n",
-      "8640/8640 [==============================] - 31s 4ms/step - loss: 0.5376 - acc: 0.7391 - val_loss: 0.8411 - val_acc: 0.5000\n"
+     "ename": "NameError",
+     "evalue": "name 'Sequential' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-678b810a134b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCuDNNLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_sequences\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#model.add(CuDNNLSTM(8, return_sequences=True))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCuDNNLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturn_sequences\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCuDNNLSTM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Sequential' is not defined"
      ]
     }
    ],
