--- a/code/2018-8-24_multiclassification.ipynb
+++ b/code/2018-8-24_multiclassification.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,31 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-2184b08399dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0ma_line\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcsv_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mcurr_line\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma_line\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mstage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mvtid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_line\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseq_record_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(real_buffer_path, \"rb\") as buff:\n",
     "    seq_record_list = pickle.load(buff)\n",
+    "seq_record_list2 = sorted(seq_record_list, key = lambda x:int(x[0].split('|')[0][2:]))\n",
     "with open(classes_path, encoding='utf-8') as csv_file:\n",
     "    for a_line in csv_file:\n",
-    "        curr_line = a_line.split('\\t')\n",
+    "        curr_line = a_line.split(',')\n",
     "        stage = curr_line[3]\n",
     "        vtid = curr_line[1]\n",
-    "print(seq_record_list[0])\n",
-    "len(seq_record_list)"
+    "print(seq_record_list2[0][0].split('|')[0][2:])\n",
+    "len(seq_record_list2)"
    ]
   },
   {
